--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <!-- Main content -->
 <div class="container">
   <h1>Tutorial for R-exams package</h1>
-
+Installation:
+In R, install the R-exams package by performing the following command:
 
 <!-- Footer -->
 <footer class="container-fluid text-center">
